[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/icon_ok.png" type="Texture" id=1]
[ext_resource path="res://DraggablePopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/icon_cancel.png" type="Texture" id=3]
[ext_resource path="res://CanvasSizePopup.gd" type="Script" id=4]
[ext_resource path="res://Assets/icon_top.png" type="Texture" id=5]
[ext_resource path="res://Assets/icon_right_top.png" type="Texture" id=6]
[ext_resource path="res://Assets/icon_left.png" type="Texture" id=7]
[ext_resource path="res://Assets/icon_right.png" type="Texture" id=8]
[ext_resource path="res://Assets/icon_left_top.png" type="Texture" id=9]
[ext_resource path="res://Assets/icon_bottom.png" type="Texture" id=10]
[ext_resource path="res://Assets/icon_right_bottom.png" type="Texture" id=11]
[ext_resource path="res://Assets/icon_center.png" type="Texture" id=12]
[ext_resource path="res://Assets/icon_left_bottom.png" type="Texture" id=13]

[node name="CanvasSizePopup" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggablePopup" parent="." instance=ExtResource( 2 )]
visible = true
margin_right = 165.0
margin_bottom = 230.0

[node name="GridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -201.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WidthLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 17.0
text = "Width"
valign = 1

[node name="WidthTextEdit" type="TextEdit" parent="DraggablePopup/GridContainer"]
margin_left = 46.0
margin_right = 116.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "32"

[node name="HeightLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 27.0
margin_right = 42.0
margin_bottom = 41.0
text = "Height"
valign = 1

[node name="HeightTextEdit" type="TextEdit" parent="DraggablePopup/GridContainer"]
margin_left = 46.0
margin_top = 24.0
margin_right = 116.0
margin_bottom = 44.0
rect_min_size = Vector2( 70, 20 )
text = "32"

[node name="DirGridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -36.0
margin_right = 51.5
margin_bottom = 68.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTopButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 9 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 5 )
expand_icon = true

[node name="RightTopButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 6 )
expand_icon = true

[node name="LeftButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 7 )
expand_icon = true

[node name="CenterButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
pressed = true
icon = ExtResource( 12 )
expand_icon = true

[node name="RightButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 8 )
expand_icon = true

[node name="LeftBottomButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 13 )
expand_icon = true

[node name="BottomButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 10 )
expand_icon = true

[node name="RightBottomButton" type="Button" parent="DraggablePopup/DirGridContainer"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
toggle_mode = true
icon = ExtResource( 11 )
expand_icon = true

[node name="OkButton" type="TextureButton" parent="DraggablePopup"]
margin_left = 87.4214
margin_top = 190.835
margin_right = 119.422
margin_bottom = 222.835
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="TextureButton" parent="DraggablePopup"]
margin_left = 123.308
margin_top = 190.1
margin_right = 155.308
margin_bottom = 222.1
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="DraggablePopup" to="." method="_on_DraggablePopup_about_to_show"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/LeftTopButton" to="." method="_on_LeftTopButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/TopButton" to="." method="_on_TopButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/RightTopButton" to="." method="_on_RightTopButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/CenterButton" to="." method="_on_CenterButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/LeftBottomButton" to="." method="_on_LeftBottomButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/BottomButton" to="." method="_on_BottomButton_pressed"]
[connection signal="pressed" from="DraggablePopup/DirGridContainer/RightBottomButton" to="." method="_on_RightBottonButton_pressed"]
[connection signal="pressed" from="DraggablePopup/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="DraggablePopup/CancelButton" to="." method="_on_CancelButton_pressed"]
